# Simple-Shell

./: CMakeLists.txt  README.md
include/: string_operations.h  validations.h
src/: main.c  string_operations.c  validations.c
